tests/paczka1/fuzzy1/85061387.err
Error in line 1: A9U A810 80,7
Error in line 2: A9U A850 77,6
Error in line 20: A9U A810 10,4
Error in line 18: A850 A850 22,6
Error in line 28: FZFQzKA8YQw A949 187,5
Error in line 36: A9U A949 43,3
